Changes in openair 0.4-21 [2011-06-03]
=====================================
* 	small change to final example of re-shaping data in importKCL
* 	timeAverage can now expand data to shorter time periods
	e.g. hourly to 15-minute. This makes it more flexible to combine data
	sets with differeing averging times. For example, daily mean particle
	data can be expanded to 1-hour means and combined with an hourly
	meteorological data set.
* 	Fix treatment of calms in checkPrep, which affected cases with
	zero wind speeds in timeAverage
*	Fix to vector averaging in timeAverage (did not include wind
	speed in calculations). For most data this will make very little
	difference, but will be more important for low wind speeds and/or
	variable wind directions.

Changes in openair 0.4-20 [2011-05-31]
=====================================
* 	Do not remove calms in timeAverage
* 	NEW FUNCTION importSAQN to import data from the Scottish Air
	Quality Network

Changes in openair 0.4-19 [2011-05-19]
=====================================
* 	improved import date.name/time.name handling of spaces
* 	Improved scaling for polarFreq
* 	scatterPlot type = "wd" labels aligned
* 	Added option "statistic" to polarPlot, which can now consider
	"mean", "median", "max" (maximum), "frequency". "stdev"
	(standard deviation) or "weighted.mean" in a similar way to polarFreq
* 	Fixed bad.24 and international tz bugs in import
* 	updated import/import.2

Changes in openair 0.4-18 [2011-05-19]
=====================================
*	Better handling of missing data in smoothTrend/MannKendall;
	particularly when there are mutiple sites
*	Do not run checkPreo on selectByDate because it removes calms
*	Fixed scaling bug in polarFreq when ws.int != 1
*	use avg.time in calcPercentile instead of 'period' to ensure
	consistency with other functions (timePlot would fail with
	percentiles)
*	return NA in aqStats when no data present; previously it tried
	to calculate quanities, returning -Inf etc
