@@ -1,5 +1,9 @@
 Changes in openair 0.4-21 [2011-06-03]
 =====================================
+* 	new 'statistic' option to pollutionRose to show contribution
+	to counts and contribution to the mean. The latter is useful for
+	displaying those wind directions that make most contribution to teh
+	overall mean. Panel mean is also now shown.
 * 	small change to final example of re-shaping data in importKCL
 * 	timeAverage can now expand data to shorter time periods
 	e.g. hourly to 15-minute. This makes it more flexible to combine data
